--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,4 @@
 sources:
   GeoLite2-Country.mmdb.gz: a6bed9516be06505c23b1f51be4b327ac7d3553f
-  OpenRA-20150614.tar.bz2: c972b553257198b4d83b79a9c70fa339476adaee
+  OpenRA-release-20181215-source.tar.bz2: f755ce53f741089b7b3e3366aaa918c085252a74
   thirdparty.tar.gz: 55dfbb709d4298e450f6bde2c693bcd0c03c6f37
