--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,4 @@
 sources:
   GeoLite2-Country.mmdb.gz: a6bed9516be06505c23b1f51be4b327ac7d3553f
-  OpenRA-release-20181215-source.tar.bz2: f755ce53f741089b7b3e3366aaa918c085252a74
+  OpenRA-release-20181215-source.tar.gz: c3e5194833fa0e607abcf1e0b8d3e34c0ab7a52b
   thirdparty.tar.gz: 55dfbb709d4298e450f6bde2c693bcd0c03c6f37
